moved to oop style instruction handler

--- a/Source/16BitVm/16BitVm.Lib.csproj
+++ b/Source/16BitVm/16BitVm.Lib.csproj
@@ -13,6 +13,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="MemoryImplementations\" />
+    <Folder Include="Instructions\" />
+    <Folder Include="Instructions\Move\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
