--- a/Source/16BitVm/16BitVm.Lib.csproj
+++ b/Source/16BitVm/16BitVm.Lib.csproj
@@ -15,6 +15,9 @@
     <Folder Include="MemoryImplementations\" />
     <Folder Include="Instructions\" />
     <Folder Include="Instructions\Move\" />
+    <Folder Include="Instructions\Arithmetik\" />
+    <Folder Include="Instructions\Arithmetik\Add\" />
+    <Folder Include="Instructions\Jumps\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
