--- a/Source/16BitVm/16BitVm.Lib.csproj
+++ b/Source/16BitVm/16BitVm.Lib.csproj
@@ -18,6 +18,7 @@
     <Folder Include="Instructions\Arithmetik\" />
     <Folder Include="Instructions\Arithmetik\Add\" />
     <Folder Include="Instructions\Jumps\" />
+    <Folder Include="Instructions\Stack\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
