added logical instructions

--- a/Source/16BitVm/16BitVm.Lib.csproj
+++ b/Source/16BitVm/16BitVm.Lib.csproj
@@ -23,6 +23,7 @@
     <Folder Include="Instructions\Arithmetik\Sub\" />
     <Folder Include="Instructions\Arithmetik\Mul\" />
     <Folder Include="Instructions\Shifting\" />
+    <Folder Include="Instructions\Logical\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
