--- a/Source/16BitVm/16BitVm.Lib.csproj
+++ b/Source/16BitVm/16BitVm.Lib.csproj
@@ -26,6 +26,7 @@
     <Folder Include="Instructions\Logical\" />
     <Folder Include="Parsing\" />
     <Folder Include="Parsing\AST\" />
+    <Folder Include="Parsing\AST\Literals\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Sprache" Version="2.3.0" />
