--- a/Source/Assembler/Assembler.csproj
+++ b/Source/Assembler/Assembler.csproj
@@ -9,9 +9,6 @@
     <ProjectReference Include="..\16BitVm\16BitVm.Lib.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Sprache" Version="2.3.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="AST\" />
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
   </ItemGroup>
 </Project>
